# pixelizer

./: .gitignore  Cargo.toml  pallete.json  readme.md
src/: main.rs  pallete.rs  utils.rs
