[package]
name = "pixelizer"
version = "0.1.0"
authors = ["4t145 <angler@hust.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
clap = "3.0.0-beta.2"
serde = "1.0.125"
serde_json = "1.0.64"
colored = "2.0.0"

[build]
